packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_output_for_sfc.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
expression: "compile_sfc_scoped(&sfc(\"bg-primary p-4 rounded-lg\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.bg-primary { background-color: var(--color-primary, #1a1d24); }
.p-4 { padding: 1rem; }
.rounded-lg { border-radius: 0.5rem; }
