packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__standard_variants.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
expression: css
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.\[&>div\]\:text-primary>div { color: var(--color-primary, #1a1d24); }
/* dark cascade (Firefox-safe; see decision-firefox-host-context-workaround) */
:host([data-theme="dark"]) .dark\:bg-surface, :root.dark .dark\:bg-surface, :root[data-theme="dark"] .dark\:bg-surface { background-color: var(--color-surface, #faf8f4); }
.focus\:text-accent:focus { color: var(--color-accent, #c8543a); }
.hover\:bg-primary:hover { background-color: var(--color-primary, #1a1d24); }
@media (min-width: 48rem) {
.md\:hover\:bg-primary:hover { background-color: var(--color-primary, #1a1d24); }
}
@media (min-width: 48rem) {
.md\:p-8 { padding: 2rem; }
}
