packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__theme_default_vs_override.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
expression: "format!(\"--- default ---\\n{default}\\n--- override ---\\n{overridden}\")"
---
--- default ---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.bg-primary { background-color: var(--color-primary, #1a1d24); }

--- override ---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
:host {
  --color-primary: oklch(0.55 0.18 28);
}
*, ::before, ::after { border-style: solid; border-width: 0; }
.bg-primary { background-color: var(--color-primary); }
